se ajusta el pom para que los modulos carguen bien